--- a/src/app/components/simple-box/simple-box.component.scss
+++ b/src/app/components/simple-box/simple-box.component.scss
@@ -10,6 +10,15 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
   transition: transform .3s;
 
+  min-height: 250px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+
   @include respond(tab-port) {
       padding: 2rem;
   }
@@ -19,6 +28,7 @@
       margin-bottom: .5rem;
       display: inline-block;
       background-image: linear-gradient(to right, $color-extra-light, $color-extra-dark);
+      background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
 
